# AOC

./: .gitignore  README.md
aoc2015/: day1.py
aoc2022/python/: day7.py
aoc2022/python/day1/: part1.py
aoc2022/rust/_day2/day2/src/: main.rs
aoc2022/rust/_day3/part1/: \
aoc2022/rust/_day3/part1/src/: main.rs
aoc2022/rust/_day3/part2/src/: main.rs
aoc2022/rust/day1/src/: main.rs
aoc2022/rustacean/: Cargo.toml
aoc2022/rustacean/src/: day1.rs  day2_p2.rs  day5.rs  day6.rs  day7.rs  day8.rs  lib.rs  playground.rs
aoc2023/python/: day1.py  day2.py  right_data.txt  util.py  wrong_data.txt
